--- a/index.html
+++ b/index.html
@@ -334,25 +334,25 @@ buildSection("Palpation (Cervical)", [
 
     { num:7, text:"C1 (lateral)", double:true },
 
-    { num:8, text:"C2-7 (lateral) — patient turn 180° and repeat", double:true }
+    { num:8, text:"C2-7 (lateral)", double:true }
 ]);
 
 buildSection("Palpation (Pelvic)", [
-    { num:1, text:"Leg Long? (ask katie)" },
-    { num:2, text:"Leg swing? (ask katie)" },
+    { num:1, text:"Leg Long" },
+    { num:2, text:"Leg swing" },
     { num:3, text:"Pelvic rotation L / R hip posterior rotation" },
     { num:4, text:"Pelvic tilt L / R hip inferior" },
     { num:5, text:"Pelvic torsion L / R ASIS superior" }
 ]);
 
 buildSection("Palpation (Femur)", [
-    { num:1, text:"Leg swing? (ask katie)" },
+    { num:1, text:"Leg swing" },
     { num:2, text:"Palpate Greater Trochanters" },
     { num:3, text:"Adjust Greater Trochanters (if required)" }
 ]);
 
 buildSection("Palpation (Fibula)", [
-    { num:1, text:"Leg swing? (ask katie)" },
+    { num:1, text:"Leg swing" },
     { num:2, text:"Palpate fibular head" },
     { num:3, text:"Adjust fibular head (if required)" }
 ]);
