removed useless message

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ buildSection("Introduction", [
 buildSection("Palpation (Cervical)", [
     { num:1, text:"C1 L / R Anterior" },
     { num:2, text:"C2-7" },
-    { num:3, text:"Spine sweep (thoracic - sacrum)" },
+    { num:3, text:"Spine sweep" },
     { num:4, text:"Iliac crest L / R inferior" },
     { num:5, text:"PSIS L / R Superior" },
     { num:6, text:"Patient side-lying position" },
@@ -340,8 +340,8 @@ buildSection("Palpation (Cervical)", [
 buildSection("Palpation (Pelvic)", [
     { num:1, text:"Leg Long" },
     { num:2, text:"Leg swing" },
-    { num:3, text:"Pelvic rotation L / R hip posterior rotation" },
-    { num:4, text:"Pelvic tilt L / R hip inferior" },
+    { num:3, text:"Pelvic rotation L / R posterior rotation" },
+    { num:4, text:"Pelvic tilt L / R inferior" },
     { num:5, text:"Pelvic torsion L / R ASIS superior" }
 ]);
 
@@ -368,7 +368,7 @@ buildSection("Foot Mobility", [
     { num:7, text:"Metatarsal counter mobilization (kitkat)", double:true },
     { num:8, text:"Toes Flexion & Extension", double:true },
     { num:9, text:"Toe Distractions", double:true },
-    { num:10, text:"Strokes / Massage Lymphatics (Switch to another foot)", double:true }
+    { num:10, text:"Strokes / Massage Lymphatics", double:true }
 ]);
 
 buildSection("Anterior Ribs", [
@@ -395,7 +395,7 @@ buildSection("Posterior Ribs", [
 ]);
 
 buildSection("Massage", [
-    { num:1, text:"Circle Motion x3 times (add pillow to patient legs)" },
+    { num:1, text:"Circle Motion x3 times" },
     { num:2, text:"Scrubbing Motion x3 times" },
     { num:3, text:"Herringbone Motion x3 times" },
     { num:4, text:"Stroking Motion x6 times" },
@@ -406,7 +406,7 @@ buildSection("Palpation (Cervical) — Seated", [
     { num:1, text:"Patient seated Position" },
     { num:2, text:"C1 Atlas" },
     { num:3, text:"C2-7" },
-    { num:4, text:"Spine sweep (thoracic - sacrum)" },
+    { num:4, text:"Spine sweep" },
     { num:5, text:"Iliac crest" },
     { num:6, text:"PSIS" }
 ]);
